stderr
JudgeMan.java:13: error: missing return statement
    }
    ^
JudgeMan.java:38: error: missing return statement
    }
    ^
2 errors
